# Solarenergie-Dashboard

./: .dockerignore  .gitignore  Dockerfile  PROJEKT_ERKLAERUNG.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: app.js  index.html  styles.css
dashboard/assets/: README.md
docs/: ABGABE_CHECKLISTE.md  AUFGABENVERTEILUNG.md  CODE_GERUEST.md  DASHBOARD_SPEZIFIKATION.md
grafana/dashboards/: solar-dashboard.json
grafana/provisioning/dashboards/: solar.yml
prometheus/: prometheus.yml
solar_cleaning/: cleaning.py
solar_config/: config.py
solar_fetcher/: fetcher.py
solar_processing/: processing.py
solar_server/: server.py
solar_storage/: storage.py
testdata/: solar_testdaten.json
tests/: test_cleaning.py  test_config.py  test_fetcher.py  test_processing.py  test_server.py  test_storage.py
