[project]
name = "dashboard-solar"
version = "0.1.0"
description = "Portable solar plant data collection and dashboard service for a university project."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "prometheus-client>=0.20.0",
    "requests>=2.32.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
include = [
    "solar_config",
    "solar_fetcher",
    "solar_processing",
    "solar_server",
    "solar_storage",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
