[project]
name = "dashboard-solar"
version = "0.1.0"
description = "Portable solar plant data collection and dashboard service for a university project."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "prometheus-client>=0.20.0",
    "requests>=2.32.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
]
dev = [
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
include = [
    "solar_cleaning",
    "solar_config",
    "solar_fetcher",
    "solar_processing",
    "solar_server",
    "solar_storage",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
